interfaced RKTest propagator to the true field from the event setup

--- a/test/RKTest.cfg
+++ b/test/RKTest.cfg
@@ -3,7 +3,7 @@ process MAGNETICFIELDTEST = {
     untracked PSet maxEvents = {untracked int32 input = 1}
     
     include "MagneticField/Engine/data/volumeBasedMagneticField.cfi"
-    replace VolumeBasedMagneticFieldESProducer.useParametrizedTrackerField = true
+//    replace VolumeBasedMagneticFieldESProducer.useParametrizedTrackerField = true
 
     module RKTest = RKTest {}
     
